# kivyex

./: .gitignore  README.md  pyproject.toml
kivyex/: test.py
kivyex/2024_10_31/: main.py  main2.py
kivyex/2024_10_5/: main.py
kivyex/2024_6_11/: filechooserex.py  imagepainter.py
kivyex/2024_6_15/: inspector.py  inspectorexample.py
kivyex/2024_6_19/: keynote.md  piplist.txt
kivyex/2024_6_24/: TEXT_FILE.txt  chat2.py  chatmdicons.py  ddtest.py  midpoint1.py  midpoint2.py  ytdlptest.py  ytrecycle.py
kivyex/2024_6_26/: HelloWorld.spec  HelloWorldOnefileKV.spec  HelloWorldkv.spec  Kivykv.py  hwkv.kv  main.py
kivyex/2024_7_2/: keynote.md  main.py
kivyex/2024_7_30/: expanfixed.py  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py
kivyex/2024_7_5/: keynote.md  main.py
kivyex/2024_8_10/: main.py
kivyex/2024_8_12/: LCARSWidget.py  LCARS_ElliotDG.py  bezierex.py  kivy_reloaderVER.py  main.py  zoomExample.py
kivyex/2024_8_17/: LCARS_Scatter.py  LCARSele.py  LCARSsnu.py  candoit.kv  candoit.spec  data_routines.py  main2.kv  main2.py  main3.py  main4.py  main5.py  main6.py  md.py  students_tab.kv  students_tab.py
kivyex/2024_8_2/: main.py
kivyex/2024_8_3/: HelloWorldIcon.spec  main.py  midpoint.py  midpoint.spec
kivyex/2024_8_4/: HelloWorldTitle.spec  main.py
kivyex/2024_8_8/: main.py
