[tool.poetry]
name = "kivyex"
version = "0.1.0"
description = ""
authors = ["AccelQuasarDragon <138998466+AccelQuasarDragon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.3.0"
kivy-matplotlib-widget = "^0.11.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
