[tool.poetry]
name = "kivyex"
version = "0.1.0"
description = ""
authors = ["AccelQuasarDragon <138998466+AccelQuasarDragon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
Kivy = "^2.3.0"
kivy-matplotlib-widget = "^0.12.4"
seaborn = "^0.13.2"
yt-dlp = "^2024.5.27"
pyinstaller = "^6.8.0"
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
psutil = "^6.0"
panda3d = "^1.10.14"
panda3d-kivy = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
